@@ -12,4 +12,3 @@ List of stuff to do:
 - Add better toolbar icons
 - Implement sanity check after saving db temp file
 - Fix compatibility with Python 3
-- Add working test suite
